[gd_scene load_steps=54 format=2]

[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_4.png" type="Texture" id=6]
[ext_resource path="res://Boss.gd" type="Script" id=7]
[ext_resource path="res://Spell.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Hurt/Bringer-of-Death_Hurt_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Walk/Bringer-of-Death_Walk_8.png" type="Texture" id=13]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_6.png" type="Texture" id=15]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_5.png" type="Texture" id=17]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_3.png" type="Texture" id=20]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_7.png" type="Texture" id=21]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_10.png" type="Texture" id=22]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_8.png" type="Texture" id=25]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_3.png" type="Texture" id=26]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_3.png" type="Texture" id=28]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_4.png" type="Texture" id=29]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_7.png" type="Texture" id=30]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_6.png" type="Texture" id=31]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_5.png" type="Texture" id=32]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_1.png" type="Texture" id=33]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_2.png" type="Texture" id=34]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_9.png" type="Texture" id=35]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_4.png" type="Texture" id=36]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_8.png" type="Texture" id=37]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_5.png" type="Texture" id=38]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_3.png" type="Texture" id=39]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_2.png" type="Texture" id=40]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Idle/Bringer-of-Death_Idle_4.png" type="Texture" id=41]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Attack/Bringer-of-Death_Attack_6.png" type="Texture" id=42]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_9.png" type="Texture" id=43]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_10.png" type="Texture" id=44]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_6.png" type="Texture" id=45]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_8.png" type="Texture" id=46]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_5.png" type="Texture" id=47]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Death/Bringer-of-Death_Death_7.png" type="Texture" id=48]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_9.png" type="Texture" id=49]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Cast/Bringer-of-Death_Cast_8.png" type="Texture" id=50]
[ext_resource path="res://Assets/sfx/Bosshurt.wav" type="AudioStream" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": false,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 42 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 35 ), ExtResource( 22 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 38 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 37 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 34 ), ExtResource( 26 ), ExtResource( 36 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 44 ), null ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 50 ), ExtResource( 49 ) ],
"loop": false,
"name": "Cast",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.6298, 29.6557 )

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 2.5, 2.5 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 46.25 ],
"_edit_vertical_guides_": [ 20.0 ]
}
Spell = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -70.4, 2.8 )
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -108.006, 19.5797 )
shape = SubResource( 2 )

[node name="SpellTimer" type="Timer" parent="."]
one_shot = true

[node name="BossHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 51 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_SpellTimer_timeout"]
